run date and ls on jobs host env

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,7 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+      - name: Todays date is
+        run: date
+      - name: Current directory content
+        run: ls -l
