--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@@v2
+      - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
       - name: npm install
-      - run: npm install
+        run: npm install
       - name: lint
-      - run: npm run eslint
+        run: npm run eslint
