--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,6 @@ on:
     branches: [master]
     types: [opened, synchronize]
 
-
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-18.04
@@ -16,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
+          node-version: "12.x"
       - name: npm install
         run: npm install
       - name: lint
@@ -27,11 +26,12 @@ jobs:
         run: npm test
       - name: e2e tests
         uses: cypress-io/github-action@v2
-        with: 
+        with:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: deploy to heroku
+        if: ${{ github.event_name == 'push' }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
